--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "mvdir": "^1.0.21",
-    "node-sass": "^4.12.0",
+    "sass": "^1.45.1",
     "sass-loader": "^8.0.2",
     "svg-sprite-loader": "^5.2.1",
     "vue-template-compiler": "^2.6.11"
